--- a/m/busi/quick-enter-info.html
+++ b/m/busi/quick-enter-info.html
@@ -294,11 +294,12 @@
     <script>
 	var query = $$.parseQueryString();
 	var AcqInstid, BusiType;
-	/*
-	history.pushState(null, null, document.URL);
+	
+	//history.pushState(null, null, document.URL);
 	window.addEventListener('popstate', function () {
-		history.pushState(null, null, document.URL);
-	});*/
+		//history.pushState(null, null, document.URL);
+		weui.page.back();
+	});
 	function serializeForm(form) {
 		var data = {}, base = {}, busi = {};
 		$(form).find('.base').each(function() {
