--- a/m/busi/quick-enter-info.html
+++ b/m/busi/quick-enter-info.html
@@ -297,7 +297,7 @@
 	
 	history.pushState(null, null, document.URL);
 	window.addEventListener('popstate', function () {
-		history.pushState(null, null, document.URL);
+		//history.pushState(null, null, document.URL);
 		weui.page.back();
 	});
 	function serializeForm(form) {
