--- a/m/busi/quick-enter-info.html
+++ b/m/busi/quick-enter-info.html
@@ -295,9 +295,9 @@
 	var query = $$.parseQueryString();
 	var AcqInstid, BusiType;
 	
-	history.pushState(null, null, document.URL);
+	history.pushState(null, null, '../index.html');
 	window.addEventListener('popstate', function () {
-		//history.pushState(null, null, document.URL);
+		history.pushState(null, null, document.URL);
 		weui.page.back();
 	});
 	function serializeForm(form) {
