--- a/m/busi/quick-enter-info.html
+++ b/m/busi/quick-enter-info.html
@@ -185,7 +185,7 @@
                         <label class="weui-label">MCC<span class="required">*</span></label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input" type="text" name="mcc_nm" required placeholder="请选择商户类别" id="mcc-select2">
+                        <input class="weui-input" type="text" name="mcc_nm" required placeholder="请选择商户类别" id="mcc-select2" readonly>
                         <input class="busi" type="hidden" name="mcc">
                     </div>
                 </div>
@@ -194,7 +194,7 @@
                         <label class="weui-label">借记卡手续费</label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input" type="text" name="debit_card_fee_nm" placeholder="传统收单类必填" id="debit-card-fee-select2">
+                        <input class="weui-input" type="text" name="debit_card_fee_nm" placeholder="传统收单类必填" id="debit-card-fee-select2" readonly>
                         <input class="busi" type="hidden" name="debit_card_fee">
                     </div>
                 </div>
@@ -203,7 +203,7 @@
                         <label class="weui-label">贷记卡手续费</label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input" type="text" name="credit_card_fee_nm" placeholder="传统收单类必填" id="credit-card-fee-select2">
+                        <input class="weui-input" type="text" name="credit_card_fee_nm" placeholder="传统收单类必填" id="credit-card-fee-select2" readonly>
                         <input class="busi" type="hidden" name="credit_card_fee">
                     </div>
                 </div>
@@ -242,7 +242,7 @@
                         <label class="weui-label">开户支行<span class="required">*</span></label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input" type="text" required="" name="account_bank_branch_nm" placeholder="请选择开户支行" id="account-bank-branch-select2">
+                        <input class="weui-input" type="text" required="" name="account_bank_branch_nm" placeholder="请选择开户支行" id="account-bank-branch-select2" readonly>
                         <input class="busi" type="hidden" name="account_bank_branch_cd">
                     </div>
                 </div>
