--- a/m/busi/quick-enter-info.html
+++ b/m/busi/quick-enter-info.html
@@ -212,7 +212,7 @@
                         <label class="weui-label">手续费</label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input busi" name="fee" type="number" required="" pattern="^\d+\.?\d*$" placeholder="当面付扫码类必填" invalidTips="请输入正确的手续费">
+                        <input class="weui-input busi" name="fee" type="number" pattern="^\d+\.?\d*$" placeholder="当面付扫码类必填" invalidTips="请输入正确的手续费">
                     </div>
                     <div class="weui-cell__ft">
                         <button class="weui-vcode-btn">‰</button>
