用户管理修改

--- a/admin/pages/userinfo.html
+++ b/admin/pages/userinfo.html
@@ -45,6 +45,24 @@
                             <input type="text" name="data_role_name">
                         </td>
                     </tr>
+                    <tr>
+                        <td>
+                            <label>机构名称：</label>
+                        </td>
+                        <td>
+                            <input type="text" name="inst_name">
+                        </td>
+                        <td>
+                            <label>用户级别：</label>
+                        </td>
+                        <td>
+                            <select name="user_level">
+                                <option value="">-请选择-</option>
+                                <option value="0">普通</option>
+                                <option value="5">机构</option>
+                            </select>
+                        </td>
+                    </tr>
                     <tfoot>
                         <tr>
                             <td colspan="4" class="center">
@@ -75,6 +93,8 @@
                         <th data-options="field:'login_name'">登录名</th>
                         <th data-options="field:'mobile'">手机号</th>
                         <th data-options="field:'nickname'">昵称</th>
+                        <th data-options="field:'inst_name'">机构名称</th>
+                        <th data-options="field:'user_level',formatter:formatUserLevel">用户级别</th>
                         <th data-options="field:'fun_role_name'">功能角色</th>
                         <th data-options="field:'data_role_name'">数据角色</th>
                     </tr>
@@ -327,6 +347,20 @@
         $('#province').combobox('clear').combobox('setValue', data.data.province);
         $('#city').combobox('clear').combobox('setValue', data.data.city);
         $('#district').combobox('clear').combobox('setValue', data.data.district);
+    }
+
+    function formatUserLevel(value) {
+        var rows = [{
+            value: '0',
+            text: '普通'
+        },{
+            value: '5',
+            text: '机构'
+        },{
+            value: '9',
+            text: '管理员'
+        }]
+        return $$.formatField(rows, value);
     }
 
     $(function() {
