--- a/m/busi/quick-enter-info.html
+++ b/m/busi/quick-enter-info.html
@@ -169,7 +169,7 @@
                         <label class="weui-label">证件号码<span class="required">*</span></label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input base" type="number" name="cert_id" required="" placeholder="请输入证件号码" validType="idnum" invalidTips="请输入有效的证件号码">
+                        <input class="weui-input base" type="text" name="cert_id" required="" placeholder="请输入证件号码" validType="idnum" invalidTips="请输入有效的证件号码">
                     </div>
                 </div>
                 <div class="weui-cell">
