--- a/m/index.html
+++ b/m/index.html
@@ -24,14 +24,14 @@
                     <div class="weui-grid__icon">
                         <img src="images/icon_nav_article.png" alt="">
                     </div>
-                    <p class="weui-grid__label">商户入网(新)</p>
+                    <p class="weui-grid__label">商户入网</p>
                 </a>
-                <a href="busi/steps/base.html" class="weui-grid">
+                <!--a href="busi/steps/base.html" class="weui-grid">
                     <div class="weui-grid__icon">
                         <img src="images/icon_nav_article.png" alt="">
                     </div>
                     <p class="weui-grid__label">商户入网(老)</p>
-                </a>
+                </a-->
                 <!-- <a href="javascript:;" class="weui-grid">
                     <div class="weui-grid__icon">
                         <img src="images/icon_nav_icons.png" alt="">
@@ -50,11 +50,23 @@
                     </div>
                     <p class="weui-grid__label">终端管理</p>
                 </a>
-                <a href="busi/steps/routine.html" class="weui-grid">
+                <!--a href="busi/steps/routine.html" class="weui-grid">
                     <div class="weui-grid__icon">
                         <img src="images/icon_nav_progress.png" alt="">
                     </div>
                     <p class="weui-grid__label">未结事项</p>
+                </a-->
+                <a href="javascript:;" class="weui-grid">
+                    <div class="weui-grid__icon">
+                        <img src="images/icon_nav_actionSheet.png" alt="">
+                    </div>
+                    <p class="weui-grid__label">&nbsp;</p>
+                </a>
+                <a href="javascript:;" class="weui-grid">
+                    <div class="weui-grid__icon">
+                        <img src="images/icon_nav_actionSheet.png" alt="">
+                    </div>
+                    <p class="weui-grid__label">&nbsp;</p>
                 </a>
                 <a href="javascript:;" class="weui-grid">
                     <div class="weui-grid__icon">
