--- a/m/busi/quick-enter-info.html
+++ b/m/busi/quick-enter-info.html
@@ -212,7 +212,7 @@
                         <label class="weui-label">手续费</label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input busi" name="fee" type="number" pattern="^\d+\.?\d*$" placeholder="当面付扫码类必填" invalidTips="请输入正确的手续费">
+                        <input class="weui-input busi" name="fee" type="number" pattern="^\d+\.?\d*$" placeholder="开通当面付即填" invalidTips="请输入正确的手续费">
                     </div>
                     <div class="weui-cell__ft">
                         <button class="weui-vcode-btn">‰</button>
@@ -260,7 +260,7 @@
                     </div>
                     <div class="weui-cell__bd">
                         <input class="weui-input" type="text" name="expand_inst_nm" required="" placeholder="请选择拓展方" id="expand-inst-select2" readonly>
-                        <input type="hidden" name="expand_inst_id">
+                        <input class="base busi" type="hidden" name="expand_inst_id">
                     </div>
                 </div>
                 <div class="weui-cell">
@@ -269,7 +269,7 @@
                     </div>
                     <div class="weui-cell__bd">
                         <input class="weui-input" type="text" name="expand_nm" required="" placeholder="请选择拓展人" id="expand-select2" readonly>
-                        <input type="hidden" name="expand_id">
+                        <input class="base busi" type="hidden" name="expand_id">
                     </div>
                 </div>
                 <div class="weui-cell">
@@ -278,7 +278,7 @@
                     </div>
                     <div class="weui-cell__bd">
                         <input class="weui-input" type="text" name="term_inves_nm" required="" placeholder="终端投资方" id="term-inves-select2" readonly>
-                        <input type="hidden" name="term_inves">
+                        <input class="base" type="hidden" name="term_inves">
                     </div>
                 </div>
             </div>
