--- a/m/busi/quick-enter-info.html
+++ b/m/busi/quick-enter-info.html
@@ -319,8 +319,7 @@
     </script>
     <script>
 	var query = $$.parseQueryString();
-	var AcqInstid, BusiType;
-	var UserInfo = {};
+	var AcqInstid, BusiType, UserInfo;
 	
 	history.pushState(null, null, document.URL);
 	window.addEventListener('popstate', function () {
