--- a/m/busi/term-info.html
+++ b/m/busi/term-info.html
@@ -296,6 +296,9 @@
             <div class="weui-media-box__desc">联系人：{{row.linkman}}</div>
             <div class="weui-media-box__desc">手机号：{{row.mobile}}</div>
             <div class="weui-media-box__desc">地址：{{row.addr}}</div>
+			<div class="weui-media-box__desc">商户号{row.mchnt_cd}}</div>
+			<div class="weui-media-box__desc">终端号：{{row.term_id}}</div>
+			<div class="weui-media-box__desc">随机验证码：{{row.capacha}}</div>
             <div class="weui-media-box__desc">审核备注：{{row.checked_reason}}</div>
             <ul class="weui-media-box__info">
                 <li class="weui-media-box__info__meta">创建时间：{{row.created_time}}</li>
@@ -324,7 +327,7 @@
 
     function onSearch(param, success, error) {
         var queryParams = $.extend(param, query);
-        $$.request('/action/bm/term-info/search', queryParams, {
+        $$.request('/action/bm/term-info/search_move', queryParams, {
             success: function(data) {
                 if (data.errcode == 0) {
                     success(data.rows);
@@ -428,19 +431,6 @@
                 }
             });
         }
-		
-		if (row.equi_type <> '9') {
-            actions.push({
-                label: '绑定设备',
-                onClick: function() {
-                    console.log(this, arguments);
-                    window.location.href = '../work/bind-device.html?' + $.param({
-						term_no: row.term_no
-					});
-                }
-            });
-        }
-
         actions.push({
             label: '终端参数',
             onClick: function() {
@@ -450,7 +440,17 @@
                 });
             }
         });
-
+		if (row.equi_type <> '9') {
+            actions.push({
+                label: '快速装机',
+                onClick: function() {
+                    console.log(this, arguments);
+                    window.location.href = '../work/quick-install.html?' + $.param({
+						term_no: row.term_no
+					});
+                }
+            });
+        }
         weui.actionSheet(actions, [{
             label: '取消',
             onClick: function() {
