--- a/m/busi/term-info.html
+++ b/m/busi/term-info.html
@@ -440,7 +440,7 @@
                 });
             }
         });
-		if (row.equi_type <> '9') {
+		if (row.equi_type != '9') {
             actions.push({
                 label: '快速装机',
                 onClick: function() {
