--- a/m/busi/term-info.html
+++ b/m/busi/term-info.html
@@ -296,7 +296,7 @@
             <div class="weui-media-box__desc">联系人：{{row.linkman}}</div>
             <div class="weui-media-box__desc">手机号：{{row.mobile}}</div>
             <div class="weui-media-box__desc">地址：{{row.addr}}</div>
-			<div class="weui-media-box__desc">商户号{row.mchnt_cd}}</div>
+			<div class="weui-media-box__desc">商户号:{{row.mchnt_cd}}</div>
 			<div class="weui-media-box__desc">终端号：{{row.term_id}}</div>
 			<div class="weui-media-box__desc">随机验证码：{{row.capacha}}</div>
             <div class="weui-media-box__desc">审核备注：{{row.checked_reason}}</div>
@@ -445,7 +445,7 @@
                 label: '快速装机',
                 onClick: function() {
                     console.log(this, arguments);
-                    window.location.href = '../work/quick-install.html?' + $.param({
+                    window.location.href = 'quick-install.html?' + $.param({
 						term_no: row.term_no
 					});
                 }
