--- a/m/busi/term-info.html
+++ b/m/busi/term-info.html
@@ -441,7 +441,7 @@
             }
         });
 		if (row.proc_st == '8' && row.equi_type != '9' &&
-		     row.mchnt_cd != 'null') {
+		     row.mchnt_cd != null) {
             actions.push({
                 label: '快速装机',
                 onClick: function() {
