--- a/m/busi/term-info.html
+++ b/m/busi/term-info.html
@@ -443,7 +443,7 @@
 		if (row.proc_st == '8' && row.equi_type != '9' &&
 		     row.mchnt_cd != null) {
             actions.push({
-                label: '快速装机',
+                label: '密钥验证码',
                 onClick: function() {
                     console.log(this, arguments);
                     window.location.href = 'quick-install.html?' + $.param({
