--- a/m/busi/term-info.html
+++ b/m/busi/term-info.html
@@ -299,6 +299,7 @@
 			<div class="weui-media-box__desc">商户号:{{row.mchnt_cd}}</div>
 			<div class="weui-media-box__desc">终端号：{{row.term_id}}</div>
 			<div class="weui-media-box__desc">随机验证码：{{row.captcha}}</div>
+			<div class="weui-media-box__desc">验证码有效期：{{row.invalid_time}}</div>
             <div class="weui-media-box__desc">审核备注：{{row.checked_reason}}</div>
             <ul class="weui-media-box__info">
                 <li class="weui-media-box__info__meta">创建时间：{{row.created_time}}</li>
