--- a/m/busi/term-param.html
+++ b/m/busi/term-param.html
@@ -72,14 +72,14 @@
                         <input type="hidden" name="mchnt_param_id">
                     </div>
                 </div>
-                <div class="weui-cell">
+                <!--div class="weui-cell">
                     <div class="weui-cell__hd">
                         <label class="weui-label">终端号</label>
                     </div>
                     <div class="weui-cell__bd">
                         <input class="weui-input" type="text" name="term_id" placeholder="请输入终端号">
                     </div>
-                </div>
+                </div-->
                 <div class="weui-cell weui-cell_select weui-cell_select-after hide">
                     <div class="weui-cell__hd">
                         <label for="" class="weui-label">参数状态<span class="required">*</span></label>
